--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <h2 class="subtitulo">Galeria</h2>
                 <div class="contenedor-galeria">
                     <img src="img/dron2.jpg" alt=""class="img-galeria">
-                    <img src="img/program.jpg" alt=""class="img-galeria">
-                    <img src="img/pc.jpg" alt=""class="img-galeria">
-                    <img src="img/dron.jpg" alt=""class="img-galeria">
-                    <img src="img/vr.jpg" alt=""class="img-galeria">
-                    <img src="img/code.jpg" alt=""class="img-galeria">
+                    <img src="img/1.jpg" alt=""class="img-galeria">
+                    <img src="img/2.jpg" alt=""class="img-galeria">
+                    <img src="img/3.jpg" alt=""class="img-galeria">
+                    <img src="img/4.jpg" alt=""class="img-galeria">
+                    <img src="img/5.jpg" alt=""class="img-galeria">
                 </div>
             </div>
         </section>
@@ -84,7 +84,7 @@
     <footer id="contacto">
         <div class="contenedor footer-content">
             <div class="contact-us">
-                <h2 class="brand">Nombre de la compañia</h2>
+                <h2 class="brand">Nombre de la compañia 2</h2>
                 <p>Frase direccion o informacion</p>
             </div>
             <div class="social-media">
